|#1272| Fixed the mis alignment of 'Numbers Only' error message on VRMIS forms.

--- a/modules/openlmis-web/src/main/webapp/public/less/distribution.less
+++ b/modules/openlmis-web/src/main/webapp/public/less/distribution.less
@@ -265,17 +265,17 @@
       display: inline;
       vertical-align: middle;
     }
-    .error {
+    .input-error-parent-cell {
       position: relative;
     }
     .rnr-form-error {
       left: initial;
-      bottom: 30px;
-      right: 8%;
+      bottom: 20px;
+      right: -6%;
     }
     .rnr-form-error:after {
       left: initial;
-      right: 16px;
+      right: 12%;
     }
     .warning-alert {
       bottom: 25px;
@@ -301,8 +301,8 @@
     }
   }
   .col-complete-vaccinated, .col-health-center, .col-mobile-brigade {
-//    max-width: 70px;
-//    min-width: 20px;
+    //    max-width: 70px;
+    //    min-width: 20px;
     input[type="text"] {
       text-align: right;
       width: 80px;
@@ -331,7 +331,7 @@
   padding-bottom: 12px;
 }
 
-#coverageTable table{
+#coverageTable table {
   width: 55%;
   min-width: 600px;
   th, td {
